# etiss-arch-plugins

./: README.md
.github/workflows/: trigger.yml
RV32IMACFDK/: CMakeLists.txt  RV32IMACFDK.h  RV32IMACFDKArch.cpp  RV32IMACFDKArch.h  RV32IMACFDKArchLib.cpp  RV32IMACFDKArchSpecificImp.cpp  RV32IMACFDKArchSpecificImp.h  RV32IMACFDKFuncs.c  RV32IMACFDKFuncs.h  RV32IMACFDKGDBCore.h  RV32IMACFDKInstr.cpp  RV32IMACFDK_RV32AInstr.cpp  RV32IMACFDK_RV32DCInstr.cpp  RV32IMACFDK_RV32DInstr.cpp  RV32IMACFDK_RV32FCInstr.cpp  RV32IMACFDK_RV32FInstr.cpp  RV32IMACFDK_RV32ICInstr.cpp  RV32IMACFDK_RV32IInstr.cpp  RV32IMACFDK_RV32KInstr.cpp  RV32IMACFDK_RV32MInstr.cpp  RV32IMACFDK_ZifenceiInstr.cpp  RV32IMACFDK_tum_csrInstr.cpp  RV32IMACFDK_tum_retInstr.cpp  RV32IMACFDK_tum_rvaInstr.cpp  RV32IMACFDK_tum_semihostingInstr.cpp
